[ADD] prima-parte-main

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Shoes</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
 <body>
-    
+    <main>
+        <!--prima parte-->
+        <div id="main-1">
+            <div class="contenitore">
+                <img src="./img/01.png" alt="1">
+                <h1 class="h1-giallo">IL NOSTRO MODELLO <br> DI PUNTA</h1>
+        </div>
+        </div>
+        <!--fine prima parte-->
+        <!--seconda parte-->
+        <!--fine seconda parte-->
+        <!--terza parte-->
+        <!--fine terza parte-->
+    </main>
 </body>
 </html>
