[ADD] 2-3-parte-main

--- a/index.html
+++ b/index.html
@@ -13,13 +13,25 @@
         <div id="main-1">
             <div class="contenitore">
                 <img src="./img/01.png" alt="1">
-                <h1 class="h1-giallo">IL NOSTRO MODELLO <br> DI PUNTA</h1>
-        </div>
+                <h1 class="h1-giallo">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+            </div>
         </div>
         <!--fine prima parte-->
         <!--seconda parte-->
+        <div id="main-2">
+            <div class="contenitore">
+                <img src="./img/02.png" alt="2">
+                <h1 class="h1-giallo">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+            </div>
+        </div>
         <!--fine seconda parte-->
         <!--terza parte-->
+        <div id="main-3">
+            <div class="contenitore">
+                <img src="./img/03.png" alt="3">
+                <h1 class="h1-verde">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+            </div>
+        </div>
         <!--fine terza parte-->
     </main>
 </body>
