[ADD] nav-main+font

--- a/index.html
+++ b/index.html
@@ -5,34 +5,39 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Shoes</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/style.css">
     </head>
-<body>
-    <main>
-        <!--prima parte-->
-        <div id="main-1">
-            <div class="contenitore">
-                <img src="./img/01.png" alt="1">
-                <h1 class="h1-giallo">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+
+    <body>
+        <main>
+            <!--prima parte-->
+            <div id="main-1">
+                <div class="contenitore">
+                    <div class="nav"><span class="numeri">1</span><span class="numeri">2</span><span class="numeri">3</span></div>
+                    <img src="./img/01.png" alt="1">
+                    <h1 class="h1-giallo">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+                </div>
             </div>
-        </div>
-        <!--fine prima parte-->
-        <!--seconda parte-->
-        <div id="main-2">
-            <div class="contenitore">
-                <img src="./img/02.png" alt="2">
-                <h1 class="h1-giallo">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+            <!--fine prima parte-->
+            <!--seconda parte-->
+            <div id="main-2">
+                <div class="contenitore">
+                    <img src="./img/02.png" alt="2">
+                    <h1 class="h1-giallo">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+                </div>
             </div>
-        </div>
-        <!--fine seconda parte-->
-        <!--terza parte-->
-        <div id="main-3">
-            <div class="contenitore">
-                <img src="./img/03.png" alt="3">
-                <h1 class="h1-verde">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+            <!--fine seconda parte-->
+            <!--terza parte-->
+            <div id="main-3">
+                <div class="contenitore">
+                    <img src="./img/03.png" alt="3">
+                    <h1 class="h1-verde">IL NOSTRO MODELLO <br>DI PUNTA</h1>
+                </div>
             </div>
-        </div>
-        <!--fine terza parte-->
-    </main>
-</body>
+            <!--fine terza parte-->
+        </main>
+    </body>
 </html>
