--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!--prima parte-->
             <div id="main-1">
                 <div class="contenitore">
-                    <div class="nav"><span class="numeri">1</span><span class="numeri">2</span><span class="numeri">3</span></div>
+                    <div class="nav"><span class="numeri"><a href="#">1</a></a></span><span class="numeri"><a href="#">2</a></a></span><span class="numeri"><a href="#">3</a></a></span></div>
                     <img src="./img/01.png" alt="1">
                     <h1 class="h1-giallo">IL NOSTRO MODELLO <br>DI PUNTA</h1>
                 </div>
