--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             <!--prima parte-->
             <div id="main-1">
                 <div class="contenitore">
-                    <div class="nav"><span class="numeri"><a href="#main-1">1</a></a></span><span class="numeri"><a href="#main-2">2</a></a></span><span class="numeri"><a href="#main-3">3</a></a></span></div>
+                    <div class="nav">
+                        <span class="numeri"><a href="#main-2">2</a></span>
+                        <span class="numeri"><a href="#main-3">3</a></span>
+                        <span class="numeri"><a href="#main-1">1</a></span>
+                    </div>
                     <img src="./img/01.png" alt="1">
                     <h1 class="h1-giallo">IL NOSTRO MODELLO <br>DI PUNTA</h1>
                 </div>
